# libre

./: CMakeLists.txt  LICENSE  config.bat  external.bat  vcpkg.bat
include/libre/: libre.h  matrix.h  opengl.h  window.h
src/: libre.c  matrix.c  opengl.c  window.c
tests/: test_matrix.c  test_opengl.c
